8369631: Assess and remedy any unsafe usage of the sr_semaphore Semaphore in the Posix signal code